# Enigmatic

./: .dockerignore  .env.example  .gitignore  01-protocol-overview.md  04-encoding-process.md  05-decoding-process.md  AGENTS.md  CONSOLE_LAUNCHER.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  VISION.md  console  docker-compose.yml  example-transaction-pattern.md  pyproject.toml  whitepaper.md
docs/: API_CONTRACT.md  ARCHITECTURE.md  DOCKER_COMPOSE.md  PROJECT_CONTEXT.md  README.md  TODO.md  TOOLING.md  VPS_AGENT_SKILL.md  VPS_SERVICE.md  android_build_notes.md  digibyte-node-setup.md  expansion-roadmap.md  rpc_test_plan.md  simple_usage.md  taproot-dialect-v1.md  taproot-wallets-cli.md  taproot_inscription_fix_plan.md  taproot_inscription_fix_summary.md  taproot_inscription_lab.md  technical_review.md  whitepaper.md
enigmatic_dgb/: __init__.py  binary_packets.py  cli.py  config.py  console.py  decoder.py  descriptors.py  dialect.py  dtsp.py  encoder.py  encryption.py  fees.py  handshake.py  http_api.py  model.py  planner.py  prime_ladder.py  rpc_client.py  script_plane.py  session.py  splash.py  symbol_sender.py  tx_builder.py  unspendable.py  watcher.py
examples/: 2025-11-17-intel-continuation-analysis.md  README.md  address_signal_analysis.py  agent_demo.py  appendix_math.md  dialect-heartbeat.yaml  dialect-intel.yaml  dialect-prime-ladder.yaml  dialect-showcase.yaml  dialect-taproot-branches.yaml  example-decoding-flow.md  example-transaction-pattern.md  example1.md  example2.md  ordinal-tooling.md
scripts/: bootstrap_console_env.sh  enigmatic_rpc.py
(+66 files in other folders)
